SFAdapter/sf_package/src/objects/AdminCredentials__c.object
<CustomObject>
    <fields>
        <fullName>CommentsLabel__c</fullName>
        <description>Call log comments label</description>
        <label>CommentsLabel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <label>Login</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServerURL__c</fullName>
        <description>Fdp server URL</description>
        <label>ServerURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Server login token.</description>
        <inlineHelpText>Server login token.</inlineHelpText>
        <label>Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FonAdminCredential</label>
    <nameField>
        <label>AdminCredentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FonAdminCredentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>